# engine_demo

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
renderer/: renderer.cpp  renderer.h
shaders/: 6.3.coordinate_systems.vs
src/: glad.c  main.cpp
src/core/: camera.cpp  camera.h  shader.cpp  shader.h
